@@ -37,6 +37,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #17381: Fixed ranges handling in case-insensitive regular expressions.
+
 - Issue #19329: Optimized compiling charsets in regular expressions.
 
 - Issue #22410: Module level functions in the re module now cache compiled
